# DebateRoom

./: .gitignore  COURTROOM_PROJECT_SPEC.md  README.md  pyproject.toml  test_mvp.py
.claude/: settings.json
backend/: config.py  logging_config.py  main.py  models.py  orchestrator.py
backend/agents/: base.py  defense.py  judge.py  prompts.py  prosecutor.py  researcher.py  tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CaseBrief.tsx  ConfidenceMeter.tsx  CourtDirective.tsx  CourtPanel.tsx  CrossExamView.tsx  DilemmaInput.tsx  EpistemicMap.tsx  EvidenceTrail.tsx  InterventionBar.tsx  JudgeSummary.tsx  PhaseIndicator.tsx  VerdictDisplay.tsx
frontend/src/hooks/: useDebateSocket.ts  useDemoMode.ts
